# windows-named-pipe

./: Cargo.toml  README.md
src/: lib.rs
